# redpanda

./: .bazelrc  .clang-tidy  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .yapfignore  BUILD  MODULE.bazel  buf.gen.yaml  buf.yaml
.github/: copilot-instructions.md
.github/workflows/: backport-command.yml  buf.yml  buildkite-slash-commands.yml  claude-code-review.yml  dispatch-docs-updates.yml  lint-bazel-pkg-tool.yml  lint-cpp.yml  rpk-build.yml  slash-commands.yml  transform-sdk-release.yml  trigger-snyk.yml
bazel/: BUILD  bench_wrapper.py  build.bzl  install-deps.sh  internal.bzl  repositories.bzl  stamp_vars.sh  test.bzl
bazel/clang_tidy/: BUILD  clang_tidy.bzl  clang_tidy.py
bazel/packaging/: BUILD  packaging.bzl  tool.go
bazel/pbgen/: BUILD  main.go  pbgen.bzl  utils.go  utils_test.go
bazel/toolchain/: Dockerfile.llvm  README.md
licenses/: third_party.md
src/v/datalake/: BUILD  CMakeLists.txt  catalog_schema_manager.cc  catalog_schema_manager.h  credential_manager.cc  data_writer_interface.cc  data_writer_interface.h  datalake_manager.cc  datalake_manager.h  datalake_usage_aggregator.cc  local_parquet_file_writer.cc  partitioning_writer.cc  record_multiplexer.cc  record_multiplexer.h  record_schema_resolver.cc  record_schema_resolver.h  record_translator.cc  record_translator.h  serde_parquet_writer.cc  serde_parquet_writer.h  table_definition.cc  translation_task.cc  translation_task.h
src/v/datalake/coordinator/: BUILD  catalog_factory.cc  catalog_factory.h  coordinator.cc  coordinator.h  coordinator_manager.cc  coordinator_manager.h  frontend.cc  frontend.h  iceberg_file_committer.cc  state.cc  state.h  state_update.cc  translated_offset_range.h
src/v/datalake/coordinator/tests/: BUILD  coordinator_test.cc  iceberg_file_committer_test.cc  iceberg_snapshot_remover_test.cc  state_machine_test.cc  state_test_utils.cc  state_test_utils.h
src/v/datalake/tests/: BUILD  CMakeLists.txt  catalog_schema_manager_test.cc  gtest_record_multiplexer_test.cc  record_generator.cc  record_multiplexer_bench.cc  record_multiplexer_test.cc  record_schema_resolver_test.cc  test_data_writer.h  test_utils.cc  translation_task_test.cc
src/v/datalake/translation/: BUILD  CMakeLists.txt  deps.cc  deps.h  partition_translator.cc  partition_translator.h  scheduling.cc  scheduling.h  scheduling_policies.cc  scheduling_policies.h  state_machine.cc  state_machine.h
src/v/datalake/translation/tests/: BUILD  CMakeLists.txt  partition_translator_tests.cc  scheduler_fixture.cc  scheduler_fixture.h  state_machine_test.cc  translated_log_offset_test.cc
src/v/iceberg/conversion/: BUILD  CMakeLists.txt  conversion_outcome.h  ir_json.cc  protobuf_utils.h  schema_avro.cc  schema_avro.h  schema_protobuf.cc  values_avro.cc  values_json.cc  values_parquet.cc  values_protobuf.cc
src/v/iceberg/conversion/json_schema/: frontend.cc  ir.h
src/v/iceberg/conversion/json_schema/tests/: frontend_test.cc
src/v/iceberg/conversion/tests/: BUILD  CMakeLists.txt  iceberg_avro_tests.cc  iceberg_json_tests.cc  iceberg_parquet_tests.cc  iceberg_protobuf_tests.cc  proto_definitions.h
src/v/iceberg/conversion/tests/testdata/: complex.proto
tests/: pyrightconfig.json  rp_cloud_cleanup.py  setup.py
tests/docker/: Dockerfile  Dockerfile.layer-image  README.md  docker-compose.yml
tests/rptest/: test_suite_ec2.yml  test_suite_gcp_temporary.yml  util.py
tools/: BUILD  bazel  bench-wrapper.sh  dev_cluster.py  dt  duckdb.sh  redpanda-gdb.py  regenerate_ducktape_protos.sh  run-cov  spark-sql.sh
tools/antithesis/: single_binary_test_package.py
tools/dashboards/: cloud_topics.json
tools/metrics-mock/: metrics-mock.py
tools/offline_log_viewer/: controller.py  storage.py  viewer.py
tools/pgo_bolt/: train_pgo.py
tools/type-checking/: type-check.py  (+1 more)
(+2079 files in other folders)
